# FakePs4

./: .gitignore  CMakeLists.txt  FakePs4.pro  build.sh
.github/workflows/: build.yml
src/: main.cc
src/core/: FileSaving.cc  Layer.cc  LayerManager.cc
src/core/Filter/: ConvolutionFilter.cc  GaussianFilter.cc
src/core/Layer/: ColorLayer.cc  MaskLayer.cc  TiledLayer.cc
src/core/Shapes/: Shape.cc
src/core/Tools/: Tool.cc
src/core/include/: LMObserver.h  Layer.h  LayerManager.h  Shape.h  Tool.h
src/core/include/Filter/: ConvolutionFilter.h  Filter.h
src/core/include/Layer/: ColorLayer.h  Layer.h  MaskLayer.h  TiledLayer.h
src/gui/: Canvas.cc  MainWindow.cc
src/gui/include/: Canvas.h  MainWindow.h
